<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.pdomingo</groupId>
	<artifactId>himalaya-spring-boot-starter</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Starter boot project</name>
	<description>Starter project</description>

	<properties>
		<java.version>14</java.version>
		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
		<jackson.version>2.11.0.rc1</jackson.version>
		<shared-kernel.version>1.0-SNAPSHOT</shared-kernel.version>
		<jackson-datatype-money.version>1.1.1</jackson-datatype-money.version>
		<spring-amqp.version>2.2.5.RELEASE</spring-amqp.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>

		<dependency>
			<groupId>com.pdomingo</groupId>
			<artifactId>shared-core</artifactId>
			<version>${shared-kernel.version}</version>
		</dependency>

		<dependency>
			<groupId>com.pdomingo</groupId>
			<artifactId>shared-events</artifactId>
			<version>${shared-kernel.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.zalando</groupId>
			<artifactId>jackson-datatype-money</artifactId>
			<version>${jackson-datatype-money.version}</version>
		</dependency>
        <dependency>
            <groupId>org.springframework.amqp</groupId>
            <artifactId>spring-amqp</artifactId>
            <version>${spring-amqp.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>--enable-preview</compilerArgs>
					<source>14</source>
					<target>14</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
